# aiwg

./: .gitignore  .npmignore  AIWG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  WARP.md  package-lock.json  package.json  vitest.config.js  vitest.uat-daemon.config.js  vitest.uat-live.config.js  vitest.uat.config.js
.aiwg/: README.md  aiwg.config
.claude-plugin/: marketplace.json
.context/: inception.json
agentic/code/frameworks/training-complete/lib/: .gitignore  README.md  pyproject.toml
agentic/code/frameworks/training-complete/lib/aiwg_training/: __init__.py  cli.py
agentic/code/frameworks/training-complete/lib/aiwg_training/core/: __init__.py  fixity.py  log.py  provenance.py  topology.py
agentic/code/frameworks/training-complete/lib/aiwg_training/decontamination/: __init__.py  check.py  fuzzy.py  ngram.py  report.py  semantic.py  targets.py
agentic/code/frameworks/training-complete/lib/aiwg_training/formats/: __init__.py  alpaca.py  base.py  chatml.py  jsonl.py  parquet.py  sharegpt.py
agentic/code/frameworks/training-complete/lib/aiwg_training/ingest/: __init__.py  acquire.py  convert.py
agentic/code/frameworks/training-complete/lib/aiwg_training/publication/: __init__.py  _field_helpers.py  dataset_docs.py  flow_dataset_build.py  reproduce.py  version.py
agentic/code/frameworks/training-complete/lib/aiwg_training/quality/: __init__.py  example_quality.py  license_check.py
agentic/code/frameworks/training-complete/lib/aiwg_training/schemas/: __init__.py  dataset_manifest.py  example_record.py  log_event.py
agentic/code/frameworks/training-complete/lib/aiwg_training/synthesis/: __init__.py  example_synthesizer.py  llm_client.py  mock_client.py  preference_export.py  preference_generator.py  synthetic_data_generator.py
agentic/code/frameworks/training-complete/lib/tests/: test_dataset_docs.py  test_decontamination.py  test_formats.py  test_ingest.py  test_preferences.py  test_publication.py  test_quality.py  test_synthesis.py
config/: vitest.config.js  vitest.uat.config.js
(+1638 files in other folders)
